<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="20dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/shafat_calculator_for_android"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/nums"
        android:layout_marginBottom="-123dp"
        android:paddingHorizontal="15dp"
        android:paddingVertical="100dp"
        android:text="@string/_screen"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/nums"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/on"
                style="@style/Button1"
                android:text="@string/on"
                tools:ignore="TextSizeCheck" />

            <Button
                android:id="@+id/num7"
                style="@style/Button2"
                android:text="@string/_7"
                tools:ignore="TextSizeCheck" />

            <Button
                android:id="@+id/num4"
                style="@style/Button2"
                android:text="@string/_4"
                tools:ignore="TextSizeCheck" />

            <Button
                android:id="@+id/num1"
                style="@style/Button2"
                android:text="@string/_1"
                tools:ignore="TextSizeCheck" />

            <Button
                android:id="@+id/del"
                style="@style/Button3"
                android:text="@string/del"
                tools:ignore="TextSizeCheck,TextContrastCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/off"
                style="@style/Button1"
                android:text="@string/off"
                tools:ignore="TextSizeCheck" />

            <Button
                android:id="@+id/num8"
                style="@style/Button2"
                android:text="@string/_8"
                tools:ignore="TextSizeCheck" />

            <Button
                android:id="@+id/num5"
                style="@style/Button2"
                android:text="@string/_5"
                tools:ignore="TextSizeCheck" />

            <Button
                android:id="@+id/num2"
                style="@style/Button2"
                android:text="@string/_2"
                tools:ignore="TextSizeCheck" />

            <Button
                android:id="@+id/num0"
                style="@style/Button2"
                android:text="@string/_0"
                tools:ignore="TextSizeCheck,DuplicateSpeakableTextCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/ac"
                style="@style/Button1"
                android:text="@string/ac"
                tools:ignore="TextSizeCheck" />

            <Button
                android:id="@+id/num9"
                style="@style/Button2"
                android:text="@string/_9"
                tools:ignore="TextSizeCheck" />

            <Button
                android:id="@+id/num6"
                style="@style/Button2"
                android:text="@string/_6"
                tools:ignore="TextSizeCheck" />

            <Button
                android:id="@+id/num3"
                style="@style/Button2"
                android:text="@string/_3"
                tools:ignore="TextSizeCheck" />

            <Button
                android:id="@+id/point"
                style="@style/Button2"
                android:text="@string/point"
                tools:ignore="TextSizeCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/div"
                style="@style/Button3"
                android:text="@string/div"
                tools:ignore="TextSizeCheck,TextContrastCheck" />

            <Button
                android:id="@+id/times"
                style="@style/Button3"
                android:text="@string/multiply"
                tools:ignore="TextSizeCheck,TextContrastCheck,TextContrastCheck" />

            <Button
                android:id="@+id/min"
                style="@style/Button3"
                android:text="@string/minus"
                tools:ignore="TextSizeCheck,TextContrastCheck" />

            <Button
                android:id="@+id/plus"
                style="@style/Button3"
                android:text="@string/plus"
                tools:ignore="TextSizeCheck,TextContrastCheck" />

            <Button
                android:id="@+id/equal"
                style="@style/Button3"
                android:text="@string/equal"
                tools:ignore="TextSizeCheck,TextContrastCheck" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>